<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/videoView_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/videoView_go_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/videoView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/long_text"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/videoView_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/videoView_three_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />

        <ImageButton
            android:id="@+id/videoView_rewind"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_rewind" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageButton
            android:id="@+id/videoView_play_pause_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/netflix_pause_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageButton
            android:id="@+id/videoView_forward"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_forward" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoView_four_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/videoView_four_one_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <SeekBar
                android:id="@+id/videoView_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="50"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/red"
                android:thumb="@drawable/custom_thumb"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/videoView_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/_00_00_00"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/videoView_four_two_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/videoView_lock_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:theme="@style/MyRipple">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/netflix_unlock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/lock"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/videoView_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:theme="@style/MyRipple">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/netflix_audio_subtitles" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/audio_sub"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/videoView_rotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:theme="@style/MyRipple">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_rotation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/rotate"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_five_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="75dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/video_five_child_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/netflix_lock_black" />

            <TextView
                android:id="@+id/videoView_lock_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"

                android:text="@string/screen_locked"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:id="@+id/videoView_lock_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/tap_to_unlock"
            android:textColor="@color/light_white"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
